# charuco_calibration

./: .clang-format  .run-clang-format  .travis.yml  CMakeLists.txt  package.xml
common/include/charuco_calibration/: calibrator.hpp  utils.hpp
common/src/: calibrator.cpp  utils.cpp
launch/: files_calibration.launch
src/: calibrate_camera_from_files.cpp  calibrate_camera_ros.cpp  camera_pose_node.cpp  test_function.cpp
